--- a/css/project.css
+++ b/css/project.css
@@ -1,4 +1,14 @@
-.paragraph {
+@import url('style.css');
+h1 {
+    text-decoration: underline;
+}
+
+h1, h4 {
+    text-align: center;
+    transition: 1s;
+}
+
+div {
     text-align: justify;
 }
 
