--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,23 @@ body {
     width: 100%;
 }
 
+
+h3 {
+    color: var(--primary-brand-color);
+    margin-top: 25px;
+    text-decoration: underline;
+}
+
+
+
 main {
     overflow-x: hidden;
+}
+
+p {
+    width: 100%;
+    margin-top: 5px;
+    text-align: justify;
 }
 
 .container {
@@ -234,12 +249,14 @@ main {
 }
 
 .main-content {
+    padding: 2%;
     display: grid;
     grid-gap: 15px;
     border-radius: 5px;
-    padding: 15px;
     background-color: var(--secondary-bg-color);
     width: 750px;
+    height: auto;
+    box-shadow: 0px 0px 4px 2px var(--primary-shadow-color);
     }
 
 .footer-content-wrapper {
@@ -583,6 +600,11 @@ input[type=submit]:hover(not:disabled) {
     cursor: pointer;
     color: var(--secondary-brand-color);
     background-color: var(--primary-brand-color);
+}
+
+img{
+    border-radius: 5px;
+    width: 100%;
 }
 
 @media screen and (max-height: 450px) {
