--- a/css/home.css
+++ b/css/home.css
@@ -104,7 +104,7 @@ a:hover{
     }
 
     .personal-content-bottom > .about-me > div {
-        width: 100vw;
+        width: 100%;
         padding: 0, 5%;
     }
     
