--- a/css/idealJob.css
+++ b/css/idealJob.css
@@ -8,7 +8,7 @@
 }
 
 img {
-    width: 60%;
+    width: 80%;
 }
 
 h1, h4, h5 {
@@ -38,3 +38,8 @@ h1 {
     width: 100%;
 }
 
+@media screen and(max-width: 750px) {
+    img {
+        width: 80%;
+    }
+}
