--- a/css/idealJob.css
+++ b/css/idealJob.css
@@ -38,7 +38,7 @@ h1 {
     width: 100%;
 }
 
-@media screen and(max-width: 750px) {
+@media screen and(max-width: 750px;) {
     img {
         width: 100%;
     }
