--- a/css/idealJob.css
+++ b/css/idealJob.css
@@ -38,8 +38,9 @@ h1 {
     width: 100%;
 }
 
-@media screen and(max-width: 750px;) {
-    img {
+@media screen and(max-width: 750px){
+    img{
         width: 100%;
     }
 }
+
